# deeprl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: default.yaml
notebook/: ppo.py  simple_rl.ipynb
src/: main.py
src/deeprl/: __init__.py
src/deeprl/config/: __init__.py  config_parser.py
src/deeprl/gym_envs/: __init__.py  gym_builder.py
src/deeprl/layers/: __init__.py  cnn_layers.py
src/deeprl/losses/: __init__.py  ppo_losses.py
src/deeprl/memory/: __init__.py  replay_buffer.py
src/deeprl/model/: __init__.py  actor_critic.py  base_model.py
src/deeprl/runners/: __init__.py  base_runner.py  car_racing_runner.py  human_interaction.py  ppo_runner.py
