[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deeprl"
version = "0.1.0"
description = "A minimal deep learning library"
authors = [
    { name = "Yang Gu", email = "yanggu123138@gmail.edu" }
]
classifiers = [  # See https://pypi.org/classifiers/
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Environment :: GPU :: NVIDIA CUDA :: 12.6",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
dependencies = [
    "numpy==1.26.4",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "gymnasium==1.1.1",
    "tqdm",
    "tensorboard",
    "pyyaml>=6.0",
]


[project.optional-dependencies]
dev = [
    "flake8>=7.0.0",
    "black>=25.1.0",
    "isort>=6.0.0",
    "pre-commit>=4.0.0",
    "mypy>=1.15.0",
    "flake8-pyproject>=1.2.0",
]
test = [
    "pytest>=7.0",
]


[tool.setuptools.packages.find]
where = ["src"]


[tool.flake8]
max-line-length = 150
exclude = [".git", "__pycache__", ".venv", "build", "dist", ".mypy_cache", "notebooks"]
ignore = ["W503", "TYP001", "E203"]


[tool.black]
line-length = 150
target-version = ['py312']


[tool.isort]
profile = "black"
line_length = 150
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
skip_gitignore = true
